--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
 @import "tailwindcss";
 
+* {
+  box-sizing: border-box;
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  overflow-x: hidden;
+}
+
 body {
   background-color: rgb(255, 255, 255);
+  min-height: 100vh;
 }
 
 /* Smooth scroll behavior */
@@ -13,19 +25,38 @@ html {
 
 /* Scroll offset for fixed navbar */
 #about {
-  scroll-margin-top: 120px; /* Adjust this value based on your navbar height */
+  scroll-margin-top: 80px; /* Mobile: 80px */
 }
 
 #project {
-  scroll-margin-top: 120px;
+  scroll-margin-top: 80px;
 }
 
 #contact {
-  scroll-margin-top: 120px;
+  scroll-margin-top: 80px;
 }
 
 #home {
-  scroll-margin-top: 120px;
+  scroll-margin-top: 80px;
+}
+
+/* Desktop scroll offset - lebih kecil lagi */
+@media (min-width: 768px) {
+  #about {
+    scroll-margin-top: 25px; /* Desktop*/
+  }
+
+  #project {
+    scroll-margin-top: 40px;
+  }
+
+  #contact {
+    scroll-margin-top: 25px;
+  }
+
+  #home {
+    scroll-margin-top: 35px;
+  }
 }
 
 @theme {
@@ -48,3 +79,4 @@ html {
     transform: translateY(-15px) rotate(3deg);
   }
 }
+
