Update portfolio: fix navbar sticky, add EmailJS contact form, improve responsive text layout

--- a/src/index.css
+++ b/src/index.css
@@ -80,3 +80,43 @@ html {
   }
 }
 
+/* Force navbar to be on top */
+.navbar-container {
+  z-index: 99999999 !important;
+  position: fixed !important;
+  top: 0 !important;
+  left: 0 !important;
+  right: 0 !important;
+}
+
+.navbar-dropdown {
+  z-index: 999999999 !important;
+}
+
+/* Dropdown menu specific */
+.navbar-dropdown > div {
+  z-index: 999999999 !important;
+  position: fixed !important;
+}
+
+/* Ensure navbar is always on top of everything */
+nav, .navbar {
+  z-index: 99999999 !important;
+}
+
+/* Force all other elements to have lower z-index */
+body > *:not(.navbar-container):not(.navbar-dropdown) {
+  z-index: 1 !important;
+}
+
+/* Specific fixes for common problematic elements */
+[data-aos], .aos-animate, .tech-floating, .profile-photo {
+  z-index: 1 !important;
+}
+
+/* Force dropdown menu to be on top */
+.navbar-dropdown div[class*="fixed"] {
+  z-index: 999999999 !important;
+  position: fixed !important;
+}
+
